--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -788,6 +788,7 @@ header {
             }
             .back-btn{
                 padding: 10px 20px ;
+                width: 80px;
                 border-radius: 40px;
                 border: 1px solid var(--white);
                 a{
