--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -720,6 +720,7 @@ header select:focus {
 }
 .Discussion-comments-page-section .Discussion-comments-box .dic-comment-head-setion .back-btn {
   padding: 10px 20px;
+  width: 80px;
   border-radius: 40px;
   border: 1px solid var(--white);
 }
