--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -181,6 +181,9 @@ margin-right: 20px;
 }
 
 /* ========= Discussion-comments-page-section End =========== */
+.Quiz-answer-page-section .Quiz-answer-right-section .Quiz-que-box form {
+    padding: 0 0px;
+}
 }   
 @media (max-width:280px){
     .nvabar-setion{
