--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -988,6 +988,66 @@ header {
         }
     }
 }
+.Quiz-answer-page-section{
+    .Quiz-answer-right-section{
+        .Quiz-que-box{
+            background-color: #EEEEEE;
+            padding: 20px;
+            margin-bottom: 15px ;
+            .Quiz-title{
+                p{
+                    padding: 10px 0;
+                    a{
+                        color: var(--black);
+                        font-size: 1.3rem;
+                    }
+                }
+            }
+            form{
+                padding: 0 30px;
+                .input-box{
+                    display: flex;
+                    align-items: baseline;
+                }
+                .progress-setion-box{
+
+                    margin: 10px 0;
+                    .progress{
+                        border: 1px solid #D9D9D9;
+                        background-color: #D9D9D9;
+                        height: 15px;
+                        .progress-bar{
+                            background-color: var(--dark-green);
+                            border-top-right-radius:7px;
+                            border-bottom-right-radius: 7px;
+                            text-align: end;
+                            padding: 7px 10px 7px 0px;
+                        }
+                    }
+                    }
+                input{
+                    margin: 8px 0;
+                    width: 20px;
+                }
+                label{
+                    margin-left: 10px;
+                }
+                button{
+                    margin:15px 0;
+                    border: 1px solid var(--theam-colour);
+                    border-radius: 40px;
+                    padding: 7px 30px;
+                    color: var(--white);
+                    background-color: var(--theam-colour);
+                    &:hover{
+                        background-color: var(--light-blue);
+                    }
+                }
+            }
+        }
+    }
+}
+
 /* ================== footer section start =============== */
 footer {
     margin-top: auto;
