--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -126,6 +126,9 @@
     margin-top: 10px;
   }
   /* ========= Discussion-comments-page-section End =========== */
+  .Quiz-answer-page-section .Quiz-answer-right-section .Quiz-que-box form {
+    padding: 0 0px;
+  }
 }
 @media (max-width: 280px) {
   .nvabar-setion .navbar-brand {
