--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -129,6 +129,20 @@ margin-right: 20px;
             }
         }
     }
+    .Member-page-section{
+
+        .member-contain-section{
+            .dropdown{
+                &:hover{
+                    .dropdown-menu{
+                        position: absolute !important;
+                       display: block !important;
+                       margin-top: 1px;
+                    }
+                }
+            }
+        }
+    }
 }
 @media (max-width:767px ){
     .nvabar-setion .nav-title {
@@ -183,6 +197,9 @@ margin-right: 20px;
 /* ========= Discussion-comments-page-section End =========== */
 .Quiz-answer-page-section .Quiz-answer-right-section .Quiz-que-box form {
     padding: 0 0px;
+}
+.Member-page-section .member-contain-section .member-boday {
+    justify-content: center;
 }
 }   
 @media (max-width:280px){
