--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1047,6 +1047,44 @@ header select:focus {
   color: var(--theam-colour);
 }
 
+/* ============= Member-detail-page-section start ====================*/
+.Member-detail-page-section .member-detail-contain-section {
+  margin-top: 10px;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section {
+  background-color: var(--light-gray);
+  padding: 15px;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .title-text {
+  font-size: 1.3rem;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .img-box {
+  overflow: hidden;
+  height: 150px;
+  width: min(100% - 10px, 150px);
+  margin-inline: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .e-mail-section {
+  display: flex;
+  align-items: baseline;
+  margin: 10px 0;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .e-mail-section a {
+  margin-left: 10px;
+  color: var(--black);
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .link-body {
+  margin: 10px 0;
+}
+.Member-detail-page-section .member-detail-contain-section .member-detail-head-section .link-body a {
+  color: var(--orange);
+  text-decoration: underline;
+}
+
+/* ============= Member-detail-page-section End ====================*/
 /* ================== footer section start =============== */
 footer {
   margin-top: auto;
