--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -49,6 +49,9 @@ header {
                         &:hover {
                             color: var(--dark-blue);
                         }
+                        &:focus{
+                            background-color: transparent !important;
+                        }
                     }
                 }
             }
@@ -1113,7 +1116,6 @@ header {
 /* =========== Quiz-answer-page-section End =============*/
 /* ============= member-page-setion-start =============*/
 
-/* ============= member-page-setion-End =============*/
 
 .Member-page-section {
     .member-contain-section {
@@ -1240,6 +1242,8 @@ header {
         }
     }
 }
+/* ============= member-page-setion-End =============*/
+
 /* ============= Member-detail-page-section start ====================*/
 .Member-detail-page-section{
     .member-detail-contain-section{
@@ -1273,6 +1277,44 @@ header {
                 a{
                     color: var(--orange);
                     text-decoration: underline;
+                }
+            }
+        }
+        .member-box{
+            margin: 10px 0;
+            display: flex;
+            align-items: initial;
+            flex-wrap: wrap;
+            .first-title{
+                padding: 10px;
+                display: flex;
+                background-color: #D2D6D2;
+                place-items: center;
+                font-size: 1.3rem;
+            }
+            .second-p{
+                padding: 10px;
+                background-color: var(--unnamed-color-e6f0f1);
+            }
+        }
+        .member-contain{
+            margin: 10px 0;
+        }
+        .btn-section{
+            margin-top: 4rem;
+            button{
+                color: var(--white);
+                border-radius: 30px;
+                border: 1px solid var(--theam-colour);
+                background-color: var(--theam-colour);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 170px;
+                padding: 8px 5px;
+                &:hover{
+                    border: 1px solid var(--light-blue);
+                    background-color: var(--light-blue);
                 }
             }
         }
