--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,8 @@ textarea:focus {
   --siment:#828282;
   --secondery-bule-dark:#C8EFFF;
   --t-color-7a7a7a: #7A7A7A;
-  --unnamed-color-ffb032: #FFB032;
   --unnamed-color-e6f0f1: #E6F0F1;
+  --unnamed-color-ffb032: #FFB032;
   --unnamed-color-ff0000: #FF0000;
   --unnamed-color-ffffff: #FFFFFF;
   --unnamed-color-545454: #545454;
@@ -162,6 +162,9 @@ header ul li .user-dropdown-menu {
 }
 header ul li .user-dropdown-menu li a:hover {
   color: var(--dark-blue);
+}
+header ul li .user-dropdown-menu li a:focus {
+  background-color: transparent !important;
 }
 header select {
   border: none !important;
@@ -953,7 +956,6 @@ header select:focus {
 
 /* =========== Quiz-answer-page-section End =============*/
 /* ============= member-page-setion-start =============*/
-/* ============= member-page-setion-End =============*/
 .Member-page-section .member-contain-section {
   margin: 10px 0px;
 }
@@ -1047,6 +1049,7 @@ header select:focus {
   color: var(--theam-colour);
 }
 
+/* ============= member-page-setion-End =============*/
 /* ============= Member-detail-page-section start ====================*/
 .Member-detail-page-section .member-detail-contain-section {
   margin-top: 10px;
@@ -1082,6 +1085,44 @@ header select:focus {
 .Member-detail-page-section .member-detail-contain-section .member-detail-head-section .link-body a {
   color: var(--orange);
   text-decoration: underline;
+}
+.Member-detail-page-section .member-detail-contain-section .member-box {
+  margin: 10px 0;
+  display: flex;
+  align-items: initial;
+  flex-wrap: wrap;
+}
+.Member-detail-page-section .member-detail-contain-section .member-box .first-title {
+  padding: 10px;
+  display: flex;
+  background-color: #D2D6D2;
+  place-items: center;
+  font-size: 1.3rem;
+}
+.Member-detail-page-section .member-detail-contain-section .member-box .second-p {
+  padding: 10px;
+  background-color: var(--unnamed-color-e6f0f1);
+}
+.Member-detail-page-section .member-detail-contain-section .member-contain {
+  margin: 10px 0;
+}
+.Member-detail-page-section .member-detail-contain-section .btn-section {
+  margin-top: 4rem;
+}
+.Member-detail-page-section .member-detail-contain-section .btn-section button {
+  color: var(--white);
+  border-radius: 30px;
+  border: 1px solid var(--theam-colour);
+  background-color: var(--theam-colour);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  padding: 8px 5px;
+}
+.Member-detail-page-section .member-detail-contain-section .btn-section button:hover {
+  border: 1px solid var(--light-blue);
+  background-color: var(--light-blue);
 }
 
 /* ============= Member-detail-page-section End ====================*/
