--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -1322,7 +1322,48 @@ header {
 }
 
 /* ============= Member-detail-page-section End ====================*/
-
+.contact-admin-page-section{
+    .contact-admin-body{
+        margin-top: 10px;
+        .head-title{
+            p{
+                font-size: 1.3rem;
+                color:#545454 ;
+            }
+        }
+        .connect-form-setion{
+            form{
+              .cheakbox-section{
+                display: inline-flex;
+                margin: 10px 0;
+              }  
+              textarea{
+                width: 100%;
+                border: 0.5px solid var(--gray);
+                padding: 10px;
+                margin: 10px 0;
+              }
+              .btn-section{
+                button{
+                    color: var(--white);
+                    border-radius: 30px;
+                    border: 1px solid var(--theam-colour);
+                    background-color: var(--theam-colour);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100px;
+                    padding: 8px 5px;
+                    &:hover{
+                        border: 1px solid var(--light-blue);
+                        background-color: var(--light-blue);
+                    }
+                }
+              }
+            }
+        }
+    }
+}
 /* ================== footer section start =============== */
 footer {
     margin-top: auto;
